--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,5 +1,5 @@
 @import "bootstrap";
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -30,3 +30,8 @@ body {
   background: image_url('papyrus-dark.png');
   box-shadow: 0px 1px 3px #2a2a2a;
 }
+
+
+.navbar-inverse .navbar-brand {
+  font-family: 'Montserrat', sans-serif;
+  }
