--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       
-      <%= link_to 'Nomster', 'root_path', class: 'navbar-brand' %>
+      <%= link_to 'Nomster', root_path, class: 'navbar-brand' %>
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
@@ -34,7 +34,7 @@
       <p class="alert alert-info"><%= notice %></p>
     <% end %>
     <% if alert.present? %>
-     <p class="alert alert-danger"><%= alert %></p>
+      <p class="alert alert-danger"><%= alert %></p>
     <% end %>
 
     <%= yield %>
