--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -36,3 +36,10 @@ body {
 .navbar-inverse .navbar-brand {
   font-family: 'Montserrat', sans-serif;
   }
+
+.invalid_feedback {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+}
