--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -103,5 +103,11 @@
       </blockquote>
     </div>
   <% end %>
+
+  <div class ='clear'></div>
+  <%= simple_form_for @photos, url: place_photos_path(@place) do |f| %>
+    <%= f.input :caption %>
+    <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+  <% end %>
 </div>
 
