--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -105,26 +105,54 @@
   <% end %>
 
   
-  <div class ='clear'></div>
+<div class ="clear"></div> 
+<% simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+  <% = f.input :caption %>
   
-
-
-  <%= simple_form_for @photos, url: 'place_photos_path(@place)' do |f| %>
-    <%= f.input :caption %>
-    <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
-  <% end %>
+  <% = f.submit "Add a Photo", class: 'btn btn-primary' %>
+<% end %>
 
 <h1>Photos</h1>
 
-<% @place.photos.each do |photos| %>
+<% @place.photos.each do |photo| %>
   <div>
     <blockquote>
-      <b><%= photos.caption %></b> -
-      <small><%= photos.user.email %></small>
+      <% if photo.humanized_rating.present? %>
+        <b><%= photo.humanized_rating %></b> -
+      <% end %>
+      <%= photo.caption %>
+      <small><%= photo.user.email %></small>
     </blockquote>
   </div>
 <% end %>
 
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Add a Photo
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Add a Photo</h4>
+      </div>
+     
+      <% simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <div class="modal-body">
+          <% = f.input :caption %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <% = f.submit "Add a Photo", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
 
