--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -107,24 +107,25 @@
   
 <div class ="clear"></div> 
 <% simple_form_for @photo, url: place_photos_path(@place) do |f| %>
-  <% = f.input :caption %>
-  
-  <% = f.submit "Add a Photo", class: 'btn btn-primary' %>
+  <%= f.input :caption %>
+  <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
 <% end %>
 
 <h1>Photos</h1>
 
-<% @place.photos.each do |photo| %>
-  <div>
-    <blockquote>
-      <% if photo.humanized_rating.present? %>
-        <b><%= photo.humanized_rating %></b> -
-      <% end %>
-      <%= photo.caption %>
-      <small><%= photo.user.email %></small>
-    </blockquote>
-  </div>
-<% end %>
+<div class="row">
+  <% @place.photos.each do |photo| %>
+    <div class="col-12 col-sm-6">
+      <blockquote>
+        <% if photo.humanized_rating.present? %>
+          <b><%= photo.humanized_rating %></b> -
+        <% end %>
+        <%= photo.caption %>
+        <small><%= photo.user.email %></small>
+      </blockquote>
+   </div>
+  <% end %>
+</div>
 
 
 <!-- Button trigger modal -->
@@ -141,18 +142,28 @@
           <span aria-hidden="true">×</span>
         </button>
         <h4 class="modal-title" id="myModalLabel">Add a Photo</h4>
-      </div>
-     
+      </div>   
       <% simple_form_for @photo, url: place_photos_path(@place) do |f| %>
         <div class="modal-body">
-          <% = f.input :caption %>
+          <%= f.input :caption %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <% = f.submit "Add a Photo", class: 'btn btn-primary' %>
+          <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
   </div>
 </div>
 
+
+<div class="col-10 offset-1">
+  <h1 class="float-left">Photos</h1>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+  Add a Photo
+  </button>
+</div>
+
+
+<div class="clear"></div>
