--- a/app/views/notification_mailer/comment_added.html.erb
+++ b/app/views/notification_mailer/comment_added.html.erb
@@ -1,8 +1,8 @@
-Hello
+<p>Hey There!</p>
+<p>
+    Congrats!  <b>A comment has been added on Nomster</b>.
+    Check it out <%= link_to 'here', place_url(@place) %>.
+</p>
 
-
-Congratulations. A comment has been added on Nomster
-
-
-Thank You,
+Thank you<br />
 Lorin Jones
