--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,19 +4,17 @@
   <br /><br />
   <p><%= @place.description %></p>
   
-
-
   <% if @place.latitude.present? && @place.longitude.present? %>
 
   <script>
 
     function initMap() {
       var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+     
       var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 12,
         center: myLatLng
       });
-
 
       var marker = new google.maps.Marker({
         position: myLatLng,
@@ -25,26 +23,25 @@
       });
     }
   </script>
-
   <script asinc defer
   src="https//maps.googleapis.com/maps/api/js?key=AIzaSyA6s2gS_Gia7tUgk23dhsOkxPMVjZhjwvg&callback=initMap">
   </script>
 
-   <div id="map"></div>
-<% end %>
-<br />
-<br />
-<div class="float-right">
+  <div id="map"></div>
+  
+  <% end %>
+ 
+  <br />
+  <br />
+  
+  <div class="float-right">
     <% if current_user && current_user == @place.user %>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
      
       <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
     <% end %>
-  
-  <br />
-  <br />
-
-
+ 
+ 
   </div>
 </div>
 
@@ -107,34 +104,49 @@
 
 <div class="clear"></div>
 
-<div class="col-10 offset-1">
-<h1 class="float-left">Photos</h1>
-  <div class="row">
-    <% @place.photos.each do |photo| %>
-    <% end %>
+<div class="modal fade" id="PhotoModal" tabindex="-1" role="dialog" aria-labelledby="PhotoModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="PhotoModalLabel">Add a photo</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
 
+        <div class="modal-body">
+        <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+          <%= f.input :picture %>
+          <%= f.input :caption %>
+          
+        </div>
 
-    <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
-    <br /> <br />
-      <%= f.input :picture %>
-      <%= f.input :caption %>
-      <%= f.submit 'Add a photo', class: 'btn btn-primary' %>
-    <% end %>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
 
-<h1>Photos</h1>
+<div class="col-10 offset-1">
+    <h1 class="float-left">Photos</h1>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#PhotoModal">
+      Add a Photo
+      </button>
+</div>
 
-<div class="row">
-  <% @place.photos.each do |photo| %>
-    <div class="col-12">
-      <blockquote>
-        <% if photo.caption.present? %>
-        <%= photo.caption %>
-        <% end %>
-      </blockquote>
-      <%= image_tag photo.picture.to_s, class: "img-fluid" %>
-    </div>
-  <% end %>
-</div>
-</div>
+
+
+<div class="clear"></div>
+
+  <div class="row">
+    <% @place.photos.each do |photo| %>
+        <img>
+        <%= image_tag photo.picture.to_s %>
+        </img>
+    <% end %>
+  </div>
+
