Updated Changes for lesson 44

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -23,8 +23,8 @@
       });
     }
   </script>
-  <script asinc defer
-  src="https//maps.googleapis.com/maps/api/js?key=AIzaSyA6s2gS_Gia7tUgk23dhsOkxPMVjZhjwvg&callback=initMap">
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6s2gS_Gia7tUgk23dhsOkxPMVjZhjwvg&callback=initMap">
   </script>
 
   <div id="map"></div>
