--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -89,6 +89,7 @@
 
 <div class="row">
 <% @place.comments.each do |comment| %>
+  <% if place.comments.present? %>
   <div class="col-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %>
@@ -99,6 +100,7 @@
       <small><%= comment.user.email %></small>
     </blockquote>
   </div>
+  <% end %>
 <% end %>
 </div>
 
