--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -7,15 +7,12 @@
   <% if @place.latitude.present? && @place.longitude.present? %>
 
   <script>
-
     function initMap() {
       var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
-     
-      var map = new google.maps.Map(document.getElementById('map'), {
+           var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 12,
         center: myLatLng
       });
-
       var marker = new google.maps.Marker({
         position: myLatLng,
         map: map,
@@ -23,12 +20,13 @@
       });
     }
   </script>
+
+
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6s2gS_Gia7tUgk23dhsOkxPMVjZhjwvg&callback=initMap">
   </script>
 
   <div id="map"></div>
-  
   <% end %>
  
   <br />
@@ -36,12 +34,21 @@
   
   <div class="float-right">
     <% if current_user && current_user == @place.user %>
+
+
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
      
       <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
+      <br />
+      <br />
+      <button type="button" class="btn btn-primary btn-lg float-left" data-toggle="modal" data-target="#photomyModal">
+        Add Photo
+      </button>
+
+
+
     <% end %>
- 
- 
+  
   </div>
 </div>
 
@@ -50,105 +57,106 @@
 
 
 
-<!-- Modal -->
+<!-- Comments Modal pop up window -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
-        
+        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
       </div>
+      <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
         <div class="modal-body">
-        <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
           <%= f.input :message %>
           <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
         </div>
-
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+           <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
         </div>
-      <% end %>
+     <% end %>
     </div>
   </div>
 </div>
 
 
+
+<!--Add comment button -->
 <div class="col-10 offset-1">
-<h1 class="float-left">Comments</h1>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
+  <h1 class="float-left">Comments</h1>
+  <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+      Add a comment
+    </button>
 </div>
+
 
 <div class="clear"></div>
 
+
+<!-- Comments displayed on page -->
 <div class="row">
-<% @place.comments.each do |comment| %>
-  <% if place.comments.present? %>
-  <div class="col-12 col-sm-6">
-    <blockquote>
-      <% if comment.humanized_rating.present? %>
-          <b><%= comment.humanized_rating %></b> - 
+  <% @place.comments.each do |comment| %>
+    <div class="col-12 col-sm-6">
+       <blockquote>
+       <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
         <% end %>
-
-      <%= comment.message %>
-      <small><%= comment.user.email %></small>
-    </blockquote>
-  </div>
+        <%= comment.message %><br />
+        <small><%= comment.user.email %></small>
+      </blockquote>
+    </div>
   <% end %>
-<% end %>
 </div>
 
-<div class="clear"></div>
 
-<div class="modal fade" id="PhotoModal" tabindex="-1" role="dialog" aria-labelledby="PhotoModalLabel" aria-hidden="true">
+
+<!-- Photo Modal pop up window-->
+<div class="modal fade" id="photomyModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="PhotoModalLabel">Add a photo</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
+        <h4 class="modal-title" id="photoModalLabel">Add a photo</h4>
       </div>
-
+      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
         <div class="modal-body">
-        <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
           <%= f.input :picture %>
           <%= f.input :caption %>
-          
         </div>
-
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+           <%= f.submit "Upload", class: 'btn btn-primary' %>
         </div>
-      <% end %>
+     <% end %>
     </div>
   </div>
 </div>
 
+<!--Add photo button-->
 <div class="col-10 offset-1">
-    <h1 class="float-left">Photos</h1>
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#PhotoModal">
-      Add a Photo
-      </button>
+  <h1 class="float-left">Pictures</h1>
+  <!--Button trigger photo modal -->
+  <!--<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#photomyModal">
+        Add Photo
+      </button> -->
 </div>
-
-
 
 <div class="clear"></div>
 
-  <div class="row">
-    <% @place.photos.each do |photo| %>
-        <img>
-        <%= image_tag photo.picture.to_s %>
-        </img>
-    <% end %>
-  </div>
-
+<!-- photos displayed on page -->
+<% @place.photos.each do |photo| %>
+    <div class="col-12 col-sm-6">
+      <% if photo.picture.present? %>
+        <blockquote>
+            <%= image_tag photo.picture.url , class: 'img-fluid' %> 
+            <%= photo.caption %><br />
+            <small><%= photo.user.email%></small>
+        </blockquote>
+      <% end %>
+    </div>
+<% end %>
