--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
 <div class="row">
   <% @user.comments.each do |comment| %>
     <div class="col-12 col-sm-6">
-      <h2 class="text-center"><%= link_to_place.name, place_path(comment.place) %></h2>
+      <h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
       <blockquote>
         <% if comment.humanized_rating.present? %>
           <b><%= comment.humanized_rating %></b> -
@@ -31,3 +31,39 @@
     </div>
   <% end %>
 </div>
+
+
+<div class="clear"></div>
+<br /><br />
+<h2 class="text-center">My Places</h2>
+<br /><br />
+<% @user.places.each do |place| %>
+  <div class="booyah-box col-10 offset-1">
+    <h1><%= link_to place.name, place_path(place) %></h1><br />
+    <i><%= place.address %></i><br /><br />
+    <p><%= place.description %></p><br />
+    <% if place.user.present? %>
+      <small><%= place.user.email %></small>
+    <% end %>
+
+  <div class="col-12">
+    <% if place.photos.present? %>
+      <div>
+        <%= image_tag place.photos.last.picture.to_s, class: "img-fluid" %>
+      </div>
+    <% end %>
+  </div>
+
+  <% if place.comments.present? %>
+    <div class="col-12">
+      <blockquote>
+        <% if place.comments.last.humanized_rating.present? %>
+          <b><%= place.comments.last.humanized_rating %></b> -
+        <% end %>
+        <%= place.comments.last.message %>
+        <small><%= place.comments.last.user.email %></small>
+      </blockquote>
+    </div>
+  <% end %>
+  </div>
+<% end %>
